# SmartDict

./: .gitignore  CMakeLists.txt  databasehelper.cpp  databasehelper.h  filehelper.cpp  filehelper.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkmanager.cpp  networkmanager.h  style.qss
